masonry_core/src/widgets/snapshots/masonry_core__widgets__checkbox__tests__simple_checkbox-2.snap
---
source: masonry_core/src//widget/checkbox.rs
assertion_line: 263
expression: harness.root_widget()
---
SizedBox(
    Checkbox<[X]>(
        Label<Hello>,
    ),
)
