masonry_core/src/widgets/snapshots/masonry_core__widgets__checkbox__tests__simple_checkbox.snap
---
source: masonry_core/src//widget/checkbox.rs
assertion_line: 252
expression: harness.root_widget()
---
SizedBox(
    Checkbox<[ ]>(
        Label<Hello>,
    ),
)
